--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
-.col .card {
+* .microcard {
     position: relative;
-    width: 300px;
+    width: 100%;
     height: 200px;
     box-shadow: 2px 2px 5px grey;
-    margin: 10px;
     padding-top: 20px;
     border-radius: 10px;
     text-align: center;
 }
 
-.col .card a {
+* .microcard a {
     font-size: 20px;
 }
 
-.col .card img {
+* .microcard img {
     max-height: 100%;
     max-width: 100%;
     width: auto;
@@ -26,4 +25,27 @@
     margin: auto;
 }
 
-/* need to place three col div horizontally */
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+header{
+    height: 150px;
+    text-align: center;
+}
+
+body{
+    margin: 0 0 25px;
+    padding: 25px;
+}
+
+footer{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 25px;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+}
