--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     border-radius: 10px;
     text-align: center;
     margin:20px;
+    overflow: hidden;
 }
 
 * .microcard a {
@@ -14,17 +15,14 @@
 }
 
 * .microcard img {
-    max-height: 100%;
-    max-width: 100%;
-    width: auto;
-    height: auto;
+    width:100%;
+    height:auto;
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-    overflow: hidden;
 }
 
 html {
@@ -33,7 +31,7 @@ html {
 }
 
 header{
-    height: 150px;
+    height: 100px;
     text-align: center;
 }
 
