changed text color to black

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body {
     width: 100vw;
     height: 100vh;
     background-color:rgba(255,255,255,0.8); 
-    color:white;
+    color:black;
     overflow-y:scroll;
     -webkit-overflow-scrolling: touch;
 }
