--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
     position:relative;
     margin-left: 3px;
     margin-right: 3px;
+    max-width: 480px;
 }
 
 .microcard {
@@ -113,7 +114,7 @@ body {
     position: relative;
     text-align: left;
     height: 30%;
-    background-color:rgba(255, 255, 255, 0.75);
+    background-color:rgba(255, 255, 255, 0.90);
 }
 
 .microcard-text > .title {
