--- a/style.css
+++ b/style.css
@@ -305,6 +305,12 @@ svg:hover > a {
         right: 7%;
     }
 
+    .contents-body > p > img {
+        display: inline-block;
+        max-width: 100%;
+        max-height: 480px;
+    }
+
     .card-container{
         width: 360px;
     }
